@@ -1,0 +1,22 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+	<Name>
+		Test support for attribute declaration with not type (per schema), but type definition 
+		given in binding file.
+	</Name>
+	<Author>Werner Guttmann</Author>
+	<Comment>
+		Test that attribute definition with not type (per schema), but type definition 
+		given in binding file works correctly.
+	</Comment>
+	<Category>basic capability</Category>
+	<SourceGeneratorTest>
+		<Schema>test.xsd</Schema>
+		<BindingFile>binding.xml</BindingFile> 	
+		<Root_Object random="false" dump="true">Test</Root_Object>
+		<UnitTestCase>
+			<Name>Test Generation</Name>
+			<Input>input.xml</Input>
+		</UnitTestCase>
+	</SourceGeneratorTest>
+</TestDescriptor>
