@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<binding xmlns:cbf="http://www.castor.org/SourceGenerator/Binding"
+             defaultBindingType='element' >
+
+   <attributeBinding name="complexType:TestType/@use">
+      <member name="myUse" java-type="java.lang.String"/>
+   </attributeBinding>
+
+</binding>
