@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<p:test xmlns:p="http://www.mac.com/neiltaylor/xsdBinding"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.mac.com/neiltaylor/xsdBinding test.xsd "
+	use="blah">
+	p:test
+</p:test>
